Re-formatted notebook for blog

--- a/web_soil_survey_sample.ipynb
+++ b/web_soil_survey_sample.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## This jupyter notebook is just an example of using the getsoil() to go get some soil data and then provides a couple sample visualizations"
+    "## This jupyter notebook is just an example of using the getsoil() function\n",
+    "#  to go get some soil data and then provides a couple sample visualizations"
    ]
   },
   {
@@ -176,13 +177,6 @@
    "source": [
     "sns.lineplot(data= df, x= 'sandmed_r', y= 'iacornsr')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
