added comment about query

--- a/web_soil_survey_sample.ipynb
+++ b/web_soil_survey_sample.ipynb
@@ -44,6 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#If this query makes absolutely no sense to you, don't freak out\n",
+    "#The WSS provides tons of documentation on its website I have linked in the\n",
+    "#Readme\n",
+    "\n",
     "query = \"\"\"\n",
     "SELECT TOP 100\\\n",
     " sac.saversion, sac.saverest,\\\n",
